<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_default"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_margin="@dimen/margin_default"
        android:id="@+id/text_view_new_product_label"
        style="@style/Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crie_um_novo_produto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintEnd_toStartOf="@+id/spinner_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_new_product_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_product_name"
            android:inputType="textCapWords"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_do_produto" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintStart_toStartOf="@+id/spinner_amount"
        android:text="@string/quantidade"
        android:id="@+id/text_view_amount_label"
        app:layout_constraintTop_toTopOf="@id/input_layout_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@+id/text_view_amount_label"
        app:layout_constraintBottom_toBottomOf="@+id/input_layout_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/amount"
        android:id="@+id/spinner_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save_product"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/salvar"
        style="@style/ButtonPrimary"/>


</androidx.constraintlayout.widget.ConstraintLayout>