<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProductDetailFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="@dimen/margin_default"
        android:id="@+id/input_layout_new_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/check_box_product_purchase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="numberDecimal"
            android:id="@+id/edit_text_new_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/preco" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_marginEnd="@dimen/margin_default"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/check_box_product_purchase"
        app:layout_constraintTop_toTopOf="@+id/input_layout_new_price"
        app:layout_constraintBottom_toBottomOf="@id/input_layout_new_price"
        android:text="@string/comprado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="@dimen/margin_default"
        android:id="@+id/input_layout_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_new_price">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/nome_do_estabelecimento"
            android:inputType="textCapWords"
            android:singleLine="true"
            android:id="@+id/edit_text_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_observation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_place">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_product_observation"
            android:inputType="textCapWords"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/observacao" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_observation"
        style="@style/ButtonPrimary"
        android:id="@+id/button_add_price"
        android:text="@string/adicionar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_margin="@dimen/margin_default"
        android:id="@+id/recycler_view_price_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add_price"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>